compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_aliased_unqualified_value.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1040
expression: "\nimport wibble.{Wibble, Wobble as Wubble}\npub fn main(wibble) {\n    case wibble {\n        Wibble -> Nil\n    }\n}\n"
---
----- SOURCE CODE
-- wibble.rakun
pub record Wibble { Wibble Wobble }

-- main.rakun

import wibble.{Wibble, Wobble as Wubble}
pub fn main(wibble) {
    case wibble {
        Wibble -> Nil
    }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:5
  │  
4 │ ╭     case wibble {
5 │ │         Wibble -> Nil
6 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wubble
