compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_module_names.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 994
expression: "\nimport wibble\npub record Things { Thing1 Thing2(Int) }\npub fn main(wobble_thing) {\n    case wobble_thing {\n        #(wibble.Wibble, Thing1) -> Nil\n    }\n}\n"
---
----- SOURCE CODE
-- wibble.rakun
pub record Wibble { Wibble Wobble }

-- main.rakun

import wibble
pub record Things { Thing1 Thing2(Int) }
pub fn main(wobble_thing) {
    case wobble_thing {
        #(wibble.Wibble, Thing1) -> Nil
    }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:5:5
  │  
5 │ ╭     case wobble_thing {
6 │ │         #(wibble.Wibble, Thing1) -> Nil
7 │ │     }
  │ ╰─────^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    #(_, Thing2(_))
    #(wibble.Wobble, Thing1)
