compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_prelude_module_unqualified.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 1055
expression: "\npub fn main() {\n  let result = Ok(Nil)\n  case result {\n    Ok(Nil) -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let result = Ok(Nil)
  case result {
    Ok(Nil) -> Nil
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:4:3
  │  
4 │ ╭   case result {
5 │ │     Ok(Nil) -> Nil
6 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Error(_)
