compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__case_error_prints_unqualifed_when_aliased.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nimport mod.{Wibble as Wobble}\nrecord Wibble { Wibble Wubble }\npub fn main() {\n  let wibble = mod.Wibble\n  case wibble {\n    mod.Wobble -> Nil\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:6:3
  │  
6 │ ╭   case wibble {
7 │ │     mod.Wobble -> Nil
8 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wobble
