compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__custom_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub record Type {\n  One\n  Two\n}\n\npub fn main(x) {\n  case x {\n    One -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub record Type {
  One
  Two
}

pub fn main(x) {
  case x {
    One -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
   ┌─ /src/one/two.rakun:8:3
   │  
 8 │ ╭   case x {
 9 │ │     One -> 1
10 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Two
