compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__custom_2.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub record Type {\n  One\n  Two\n  Three(Type)\n}\n\npub fn main(x) {\n  case x {\n    One -> 1\n    Two -> 2\n    Three(One) -> 4\n  }\n}\n"
---
----- SOURCE CODE

pub record Type {
  One
  Two
  Three(Type)
}

pub fn main(x) {
  case x {
    One -> 1
    Two -> 2
    Three(One) -> 4
  }
}


----- ERROR
error: Inexhaustive patterns
   ┌─ /src/one/two.rakun:9:3
   │  
 9 │ ╭   case x {
10 │ │     One -> 1
11 │ │     Two -> 2
12 │ │     Three(One) -> 4
13 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Three(Three(_))
    Three(Two)
